@@ -43,6 +43,16 @@
     appropriate for the entry or if needed the entire day's listitem.
 -->
     <listitem>
+      <para>2017-10-27</para>
+      <itemizedlist>
+        <listitem>
+          <para>[bdubbs] - Update rule in 83-cdrom-symlinks.rules
+          in udev-lfs tarball.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
       <para>2017-10-20</para>
       <itemizedlist>
         <listitem>
