@@ -647,10 +647,10 @@
 <!ENTITY tzdata-md5 "50dc0dc50c68644c1f70804f2e7a1625">
 <!ENTITY tzdata-home "http://www.iana.org/time-zones">
 
-<!ENTITY udev-lfs-version "udev-lfs-20140408">
+<!ENTITY udev-lfs-version "udev-lfs-20171027">
 <!ENTITY udev-lfs-size    "11 KB">
 <!ENTITY udev-lfs-url     "&anduin-sources;/&udev-lfs-version;.tar.bz2">
-<!ENTITY udev-lfs-md5     "c2d6b127f89261513b23b6d458484099">
+<!ENTITY udev-lfs-md5     "57df8283070f7997fb8b1f9bdd971671">
 <!ENTITY udev-lfs-home    " ">
 
 <!ENTITY util-linux-minor "2.31">
